; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sonic.c_predictor_calc_error.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_sonic.c_predictor_calc_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LATTICE_SHIFT = common dso_local global i32 0, align 4
@SAMPLE_FACTOR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i32, i32)* @predictor_calc_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @predictor_calc_error(i32* %0, i32* %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = load i32*, i32** %5, align 8
  %17 = load i32, i32* %7, align 4
  %18 = sub nsw i32 %17, 1
  %19 = sext i32 %18 to i64
  %20 = getelementptr inbounds i32, i32* %16, i64 %19
  %21 = load i32, i32* %20, align 4
  %22 = load i32*, i32** %6, align 8
  %23 = load i32, i32* %7, align 4
  %24 = sub nsw i32 %23, 1
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %22, i64 %25
  %27 = load i32, i32* %26, align 4
  %28 = mul nsw i32 %21, %27
  %29 = load i32, i32* @LATTICE_SHIFT, align 4
  %30 = call i32 @shift_down(i32 %28, i32 %29)
  %31 = sub nsw i32 %15, %30
  store i32 %31, i32* %10, align 4
  %32 = load i32*, i32** %5, align 8
  %33 = load i32, i32* %7, align 4
  %34 = sub nsw i32 %33, 2
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i32, i32* %32, i64 %35
  store i32* %36, i32** %11, align 8
  %37 = load i32*, i32** %6, align 8
  %38 = load i32, i32* %7, align 4
  %39 = sub nsw i32 %38, 2
  %40 = sext i32 %39 to i64
  %41 = getelementptr inbounds i32, i32* %37, i64 %40
  store i32* %41, i32** %12, align 8
  %42 = load i32, i32* %7, align 4
  %43 = sub nsw i32 %42, 2
  store i32 %43, i32* %9, align 4
  br label %44

44:                                               ; preds = %68, %4
  %45 = load i32, i32* %9, align 4
  %46 = icmp sge i32 %45, 0
  br i1 %46, label %47, label %75

47:                                               ; preds = %44
  %48 = load i32*, i32** %11, align 8
  %49 = load i32, i32* %48, align 4
  store i32 %49, i32* %13, align 4
  %50 = load i32*, i32** %12, align 8
  %51 = load i32, i32* %50, align 4
  store i32 %51, i32* %14, align 4
  %52 = load i32, i32* %13, align 4
  %53 = load i32, i32* %14, align 4
  %54 = mul nsw i32 %52, %53
  %55 = load i32, i32* @LATTICE_SHIFT, align 4
  %56 = call i32 @shift_down(i32 %54, i32 %55)
  %57 = load i32, i32* %10, align 4
  %58 = sub nsw i32 %57, %56
  store i32 %58, i32* %10, align 4
  %59 = load i32, i32* %14, align 4
  %60 = load i32, i32* %13, align 4
  %61 = load i32, i32* %10, align 4
  %62 = mul nsw i32 %60, %61
  %63 = load i32, i32* @LATTICE_SHIFT, align 4
  %64 = call i32 @shift_down(i32 %62, i32 %63)
  %65 = add nsw i32 %59, %64
  %66 = load i32*, i32** %12, align 8
  %67 = getelementptr inbounds i32, i32* %66, i64 1
  store i32 %65, i32* %67, align 4
  br label %68

68:                                               ; preds = %47
  %69 = load i32, i32* %9, align 4
  %70 = add nsw i32 %69, -1
  store i32 %70, i32* %9, align 4
  %71 = load i32*, i32** %11, align 8
  %72 = getelementptr inbounds i32, i32* %71, i32 -1
  store i32* %72, i32** %11, align 8
  %73 = load i32*, i32** %12, align 8
  %74 = getelementptr inbounds i32, i32* %73, i32 -1
  store i32* %74, i32** %12, align 8
  br label %44

75:                                               ; preds = %44
  %76 = load i32, i32* %10, align 4
  %77 = load i32, i32* @SAMPLE_FACTOR, align 4
  %78 = shl i32 %77, 16
  %79 = icmp sgt i32 %76, %78
  br i1 %79, label %80, label %83

80:                                               ; preds = %75
  %81 = load i32, i32* @SAMPLE_FACTOR, align 4
  %82 = shl i32 %81, 16
  store i32 %82, i32* %10, align 4
  br label %83

83:                                               ; preds = %80, %75
  %84 = load i32, i32* %10, align 4
  %85 = load i32, i32* @SAMPLE_FACTOR, align 4
  %86 = shl i32 %85, 16
  %87 = sub nsw i32 0, %86
  %88 = icmp slt i32 %84, %87
  br i1 %88, label %89, label %93

89:                                               ; preds = %83
  %90 = load i32, i32* @SAMPLE_FACTOR, align 4
  %91 = shl i32 %90, 16
  %92 = sub nsw i32 0, %91
  store i32 %92, i32* %10, align 4
  br label %93

93:                                               ; preds = %89, %83
  %94 = load i32, i32* %10, align 4
  %95 = load i32*, i32** %6, align 8
  %96 = getelementptr inbounds i32, i32* %95, i64 0
  store i32 %94, i32* %96, align 4
  %97 = load i32, i32* %10, align 4
  ret i32 %97
}

declare dso_local i32 @shift_down(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
